packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Event timestamp for ordering.</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>