packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/TotalFailed__c.field-meta.xml
<CustomField>
    <fullName>TotalFailed__c</fullName>
    <description>Total failed (records/items) across all work item types. Transaction events only.</description>
    <label>Total Failed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>