packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/TotalProcessed__c.field-meta.xml
<CustomField>
    <fullName>TotalProcessed__c</fullName>
    <description>Total processed (records/items) across all work itemtypes. Transaction events only.</description>
    <label>Total Processed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>