packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/TotalSucceeded__c.field-meta.xml
<CustomField>
    <fullName>TotalSucceeded__c</fullName>
    <description>Total successes (records/items) across all work item types. Transaction events only.</description>
    <label>Total Succeeded</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>