packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/TraceTimeline__c.field-meta.xml
<CustomField>
    <fullName>TraceTimeline__c</fullName>
    <description>JSON object with trace/timeline data including spans. Transaction events only.</description>
    <label>Timeline</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>