packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <description>Internal transaction identifier (TXN-timestamp-random). Used for linking events within the same transaction execution.</description>
    <label>Transaction ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>