packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/TransactionScenarioName__c.field-meta.xml
<CustomField>
    <fullName>TransactionScenarioName__c</fullName>
    <description>Business scenario name for categorizing this transaction (e.g., Standard Mortgage, High Loan Amount)</description>
    <label>Transaction Scenario Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>