packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/TransactionStatus__c.field-meta.xml
<CustomField>
    <fullName>TransactionStatus__c</fullName>
    <description>Transaction status for filtering/routing. Populated for TRANSACTION events.</description>
    <label>Transaction Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>