packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/UpsertCreatedCount__c.field-meta.xml
<CustomField>
    <fullName>UpsertCreatedCount__c</fullName>
    <description>Number of records created by upsert operation. Work item events only (DML UPSERT type).</description>
    <label>Upsert Created Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>