packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/UpsertUpdatedCount__c.field-meta.xml
<CustomField>
    <fullName>UpsertUpdatedCount__c</fullName>
    <description>Number of records updated by upsert operation. Work item events only (DML UPSERT type).</description>
    <label>Upsert Updated Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>