packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <description>ID of the user who initiated the transaction (for filtering/routing).</description>
    <label>User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>