packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/UserIsImpersonated__c.field-meta.xml
<CustomField>
    <fullName>UserIsImpersonated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether an admin is logged in as this user (impersonation). Transaction events only.</description>
    <label>User Is Impersonated</label>
    <type>Checkbox</type>
</CustomField>