packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/UserLicenseName__c.field-meta.xml
<CustomField>
    <fullName>UserLicenseName__c</fullName>
    <description>Name of the user&apos;s license (e.g., Salesforce, Salesforce Platform). Transaction events only.</description>
    <label>User License Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>