packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/UserLocale__c.field-meta.xml
<CustomField>
    <fullName>UserLocale__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>User&apos;s locale setting (e.g., en_US, de_DE). Transaction events only.</description>
    <label>User Locale</label>
    <length>20</length>
    <type>Text</type>
</CustomField>