packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <description>Username of the user executing the transaction. Transaction events only.</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>