packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/UserProfileId__c.field-meta.xml
<CustomField>
    <fullName>UserProfileId__c</fullName>
    <description>Profile ID of the user executing the transaction. Transaction events only.</description>
    <label>User Profile ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>