packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/UserProfileName__c.field-meta.xml
<CustomField>
    <fullName>UserProfileName__c</fullName>
    <description>Name of the user&apos;s profile (e.g., System Administrator). Transaction events only.</description>
    <label>User Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>