packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/UserRoleId__c.field-meta.xml
<CustomField>
    <fullName>UserRoleId__c</fullName>
    <description>ID of the user&apos;s role in the org hierarchy. Transaction events only.</description>
    <label>User Role ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>