packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/UserRoleName__c.field-meta.xml
<CustomField>
    <fullName>UserRoleName__c</fullName>
    <description>Name of the user&apos;s role (e.g., CEO, Sales Manager). Transaction events only.</description>
    <label>User Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>