packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/UserTimeZone__c.field-meta.xml
<CustomField>
    <fullName>UserTimeZone__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>User&apos;s timezone ID (e.g., America/Los_Angeles, Europe/London). Transaction events only.</description>
    <label>User Time Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>