packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <description>Type of user executing the transaction (Standard, PowerCustomerSuccess, Guest, etc.). Transaction events only.</description>
    <label>User Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>