packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/WarningCount__c.field-meta.xml
<CustomField>
    <fullName>WarningCount__c</fullName>
    <description>Count of warning messages in the transaction. Transaction events only.</description>
    <label>Warning Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>