packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/WorkId__c.field-meta.xml
<CustomField>
    <fullName>WorkId__c</fullName>
    <description>Unique identifier for the work item. Work item events only.</description>
    <label>Work ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>