packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/WorkItemCount__c.field-meta.xml
<CustomField>
    <fullName>WorkItemCount__c</fullName>
    <description>Total number of work items in the transaction. Populated for transaction events only.</description>
    <label>Work Item Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>