packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/WorkItemStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkItemStatus__c</fullName>
    <description>Work Item status for filtering/routing. Populated for WORK ITEM events.</description>
    <label>Work Item Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>