packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/WorkType__c.field-meta.xml
<CustomField>
    <fullName>WorkType__c</fullName>
    <description>Work type for OPERATION events (DML, EVENT, FLOW, EMAIL, NOTIFICATION, CALLOUT).</description>
    <label>Work Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>